retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>BirthCity__c</fullName>
        <label>Birth City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactChannel__c</fullName>
        <label>Contact Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Mobile Phone</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>Female</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegalRepresentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Representative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NationalIdentityNumber__c</fullName>
        <label>National Identity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>